<resources>
    <string name="app_name">BryCal</string>
    <string name="psycal">Psycal</string>
    <string name="mixed_air_conditions">Mixed Air\nConditions</string>
    <string name="unit_converter">Unit</string>
    <string name="unit_converter1">Unit Converter</string>
    <string name="converter">Converter</string>
    <string name="ductulator">Ductulator</string>
    <string name="region">Region</string>
    <string name="co2">Calculator</string>
    <string name="weather_bin_data">Weather\nBin Data</string>
    <string name="si">SI</string>
    <string name="ip">IP</string>
    <string name="input_output">INPUT/OUTPUT</string>
    <string name="air_stream_a">Air Stream-A</string>
    <string name="air_stream_b">Air Stream-B</string>
    <string name="air_stream_c">Air Stream-C</string>
    <string name="duct_air_flow">DUCT LENGTH(FEET)</string>
    <string name="duct_length_fit">DUCT AIR FLOW</string>
    <string name="input_3">INPUT-3</string>
    <string name="enter_number_of_bend">ENTER NUMBER OF BENDS</string>
    <string name="fourty_five_bend">45° BENDS(QTY)</string>
    <string name="ninty_bend">90° BENDS(QTY)</string>
    <string name="one_eighty_bend">180° BENDS(QTY)</string>
    <string name="calculate">Calculate</string>
    <string name="total_kwh_consume">Total KWH Consumed</string>
    <string name="co2_commission">Co2 Commission(Tons/Annum)</string>
    <string name="Duct_Velocity">Duct Velocity-(FPM)</string>
    <string name="total_electric_load">Duct Velocity-(FPM)</string>
    <string name="total_electric">Total Electric</string>
    <string name="service_factor">Service Factor(%)</string>
    <string name="running_hrs">Running HRS/DAY</string>
    <string name="no_of_work">No. of work ing days</string>


    <style name="CustomTextInputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <item name="android:layout_height">70dp</item>
        <item name="android:padding">8dp</item>
        <item name="boxStrokeColor">@color/theme_color</item>
        <item name="hintTextAppearance">@style/HintTextAppearance</item>
    </style>
    <!-- Example for customizing hint text appearance -->
    <style name="HintTextAppearance" parent="TextAppearance.AppCompat.Small">
        <item name="android:textColor">#FF6200EE</item>
        <item name="android:textSize">14sp</item>
    </style>

</resources>