<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MixedAirActivity">


    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar"/>

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout1"
            android:orientation="vertical"
            android:background="@drawable/shape_border_radius"
            android:layout_width="50dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/psycal_icon"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/psycal"
                android:textColor="@color/heading_color"
                android:textSize="13sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout2"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_border_radius_active"
            android:layout_width="55dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/mixed_air_icon"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/mixed_air_conditions"
                android:textColor="@color/heading_color"
                android:textSize="13sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout3"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_border_radius"
            android:layout_width="50dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/unit_converter_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/unit_converter"
                android:textColor="@color/heading_color"
                android:textSize="13sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout4"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_border_radius"
            android:layout_width="50dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/ductulator_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/ductulator"
                android:textColor="@color/heading_color"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout5"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_border_radius"
            android:layout_width="50dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/co2_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/co2"
                android:textColor="@color/heading_color"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout6"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_border_radius"
            android:layout_width="55dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/psycal_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/weather_bin_data"
                android:textColor="@color/heading_color"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintTop_toBottomOf="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MixedAirFragment">

        <RadioGroup
            android:id="@+id/radioGroup"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp">

            <RadioButton
                android:id="@+id/rbAirStreamA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:checked="true"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginLeft="20dp"
                android:text="@string/air_stream_a"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbAirStreamB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="4dp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginLeft="20dp"
                android:text="@string/air_stream_b"
                android:textAlignment="center"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/rbAirStreamC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:padding="4dp"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginLeft="20dp"
                android:text="@string/air_stream_c"
                android:textAlignment="center"
                android:textSize="20sp" />

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
