<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back_color"
    tools:context=".DuctulatorActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar"/>
    <LinearLayout
        android:id="@+id/layoutHeader"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout1"
            android:orientation="vertical"
            android:background="@drawable/shape_border_radius"
            android:layout_width="50dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/psycal_icon"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/psycal"
                android:textColor="@color/heading_color"
                android:textSize="13sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout2"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_border_radius"
            android:layout_width="55dp"
            android:layout_height="wrap_content">

            <ImageView
                android:src="@drawable/mixed_air_icon"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/mixed_air_conditions"
                android:textColor="@color/heading_color"
                android:textSize="13sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/layout3"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_border_radius"
            android:layout_width="50dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/unit_converter_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/unit_converter"
                android:textColor="@color/heading_color"
                android:textSize="13sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout4"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_border_radius_active"
            android:layout_width="50dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/ductulator_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/ductulator"
                android:textColor="@color/heading_color"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/layout5"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_border_radius"
            android:layout_width="50dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/co2_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/co2"
                android:textColor="@color/heading_color"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout6"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:background="@drawable/shape_border_radius"
            android:layout_width="55dp"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:src="@drawable/psycal_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/weather_bin_data"
                android:textColor="@color/heading_color"
                android:textSize="14sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingBottom="30dp"
        android:layout_marginTop="160dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_marginTop="100dp"
        app:cardCornerRadius="8dp"
        android:layout_margin="10dp"
        android:paddingBottom="20dp"
        android:elevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/unit_converter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutMotorType">

            <AutoCompleteTextView
                android:id="@+id/etUnitInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:inputType="none"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/duct_length_fit"
            app:layout_constraintTop_toBottomOf="@+id/layoutProjectName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDuctLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="15sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/duct_air_flow"
            app:layout_constraintTop_toBottomOf="@+id/layoutProjectName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDuctLengthFeet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="15sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:hint="@string/input_3"
            app:layout_constraintTop_toBottomOf="@+id/layoutProjectName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etInput3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="15sp"></com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:background="@drawable/shape_ractangle_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
         <TextView
             android:gravity="center"
             android:textSize="15sp"
             android:fontFamily="@font/poppins_medium"
             android:textColor="@color/white"
             android:text="@string/enter_number_of_bend"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/fourty_five_bend"
            app:layout_constraintTop_toBottomOf="@+id/layoutProjectName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFourtyFiveBend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="15sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/ninty_bend"
            app:layout_constraintTop_toBottomOf="@+id/layoutProjectName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNintyBend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="15sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/one_eighty_bend"
            app:layout_constraintTop_toBottomOf="@+id/layoutProjectName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOneEightyBend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="15sp">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:padding="5dp"
            android:background="@drawable/shape_rectangle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:gravity="center"
                android:textSize="15sp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/white"
                android:text="@string/calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:background="@drawable/shape_ractangle_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

           <LinearLayout
               android:layout_marginLeft="30dp"
               android:layout_marginRight="30dp"
               android:layout_marginTop="10dp"
               android:background="@drawable/shape_rectangel_green"
               android:layout_width="match_parent"
               android:layout_height="40dp">
               <TextView
                   android:text="Result"
                   android:textColor="@color/white"
                    android:gravity="center"
                   android:layout_gravity="center"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>

           </LinearLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:hint="Duct Diameter(IN)"
                app:layout_constraintTop_toBottomOf="@+id/layoutProjectName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDuctDiameter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="15sp">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:hint="Fraction Loss"
                app:layout_constraintTop_toBottomOf="@+id/layoutProjectName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFractionLoss"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="15sp">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_weight="1"
                android:layout_marginBottom="50dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/Duct_Velocity"
                app:layout_constraintTop_toBottomOf="@+id/layoutProjectName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDuctVelocity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="15sp">
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>
    </androidx.cardview.widget.CardView>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>